# FlowPulse

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs
config/: hardware.json  motion.json  printer.json
docs/: gpio_config_spec.md
emb-api/: Cargo.toml
emb-api/src/: lib.rs
emb-public/: Cargo.toml  LICENSE
emb-public/examples/: message_queue_integration.rs  multi_channel_integration.rs
emb-public/src/: config_adapter.rs  config_protocol.rs  core_client.rs  lib.rs  printer_config.rs
emb-public/src/common/: debug.rs  error.rs  events.rs  geometry.rs  messages.rs  mod.rs  pin_parser.rs
emb-public/src/config/: config_adapter.rs  config_manager.rs  config_protocol.rs  mod.rs  printer_config.rs
emb-public/src/dds/: manager.rs  mod.rs
emb-public/src/gateway/: channel_manager.rs  communication.rs  mod.rs  mqtt.rs  unix_socket.rs  websocket.rs
emb-public/src/gcode/: command.rs  controller.rs  converter.rs  file.rs  mod.rs  parser.rs  types.rs
emb-public/src/message_queue/: handler.rs  mod.rs  queue.rs  types.rs
emb-public/src/message_queue/handlers/: command_handler.rs  error_handler.rs  mod.rs  status_handler.rs
emb-public/src/print_control/: job.rs  mod.rs  state_machine.rs
emb-public/src/safety/: mod.rs
emb-public/src/shared_memory/: manager.rs  mod.rs  server.rs  types.rs
emb-public/src/state/: device_state.rs  frontend_provider.rs  mod.rs
emb-public/src/state_machine/: machine.rs  mod.rs  types.rs
emb-public/src/temperature/: controller.rs  manager.rs  mod.rs  preset.rs  safety.rs  types.rs  zone.rs
emb-public/src/temperature/pid_tune/: mod.rs  protocol.rs  types.rs
gcodes/: test-100.gcode  test-200-mcode.gcode  test-200.gcode  test-300.gcode  test-400.gcode  test-50.gcode
host/: Cargo.toml  LICENSE
host/src/: app.rs  config_manager.rs  gcode_controller.rs  main.rs  printer_host_v2.rs  realtime_monitor.rs  setup.rs
host/src/debug_terminal/: debug.html
host/src/remote_api/: leveling.rs  mod.rs
releases/: LICENSE
web-server/: Cargo.toml
web-server/config/: README.md  web-server.example.json  web-server.json
web-server/src/: lib.rs  main.rs
web-server/src/config/: mod.rs
web-server/src/handlers/: auth.rs  config.rs  files.rs  mod.rs  printer.rs  temperature.rs  websocket.rs
web-server/src/middleware/: auth.rs  mod.rs
web-server/src/routes/: mod.rs
