[workspace]
resolver = "2"
members = [
    "emb-api",
    "emb-public",
    "host",
    "web-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hundred98 <hundred98@163.com>"]
description = "FlowPulse - A modular 3D printer control system with Rust-based host software and STM32 firmware"
license = "MIT"
repository = "https://github.com/hundred98/FlowPulse"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web API framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Internal crates
emb-api = { path = "emb-api" }
emb-public = { path = "emb-public" }
