[package]
name = "emb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared API types for emb-core ↔ emb-public Socket communication"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
