[package]
name = "emb-public"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "3D Printer Public Module - Open for third-party development"
license = "MIT"
repository.workspace = true

[dependencies]
# Shared API types (for Socket communication)
emb-api = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
