[package]
name = "emb-public"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "3D Printer Public Module - Open for third-party development"
license = "MIT"
repository.workspace = true

[dependencies]
# Shared API types (for Socket communication)
emb-api = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies for state management
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
env_logger = "0.10"
