[package]
name = "host"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "3D Printer Host Application"
license = "MIT"
repository.workspace = true

[[bin]]
name = "host"
path = "src/main.rs"

[[bin]]
name = "debug_terminal"
path = "src/bin/debug_terminal.rs"

[dependencies]
# Internal crates
emb-public = { workspace = true }
emb-api = { workspace = true }
web-server = { path = "../web-server" }

# Async runtime
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Web API framework (for debug_terminal)
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
