[package]
name = "web-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "FlowPulse Web Server - Axum-based REST API and WebSocket server"
license.workspace = true

[lib]
name = "web_server"
path = "src/lib.rs"

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Internal crates
emb-public = { path = "../emb-public" }

# Additional dependencies for web server
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"  # For WebSocket stream handling
jsonwebtoken = "9.3"  # For JWT authentication
uuid = { version = "1.0", features = ["v4"] }  # For generating JWT secrets

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable memory profiling
memory-profile = []

# Optimization settings for embedded Linux (low memory)
[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[profile.release.package."*"]
opt-level = "z"      # Optimize dependencies for size
